# upload_practice

./: 1_Neural_Networks_in_PyTorch.ipynb  2_Tensors_in_Pytorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb
m6_practice/: README.md  evaluate.dockerfile  model.ckpt  model.pth  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
m6_practice/.github/workflows/: test.yaml
m6_practice/conf/: config.yaml  sweep.yaml
m6_practice/data/processed/: test_target.pt  train_target.pt
m6_practice/models/: epoch=9-step=1870.ckpt  model.pth  model_0509.pth  trained_model_conf.pt
m6_practice/src/m6_practice/: download_artifact.py  evaluate.py  iris_classifier.py  link_to_registry.py  model.py  train_conf.py  train_debug.py  train_lightning.py  visualize.py
m6_practice/src/m6_practice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
m6_practice/tests/: test_data.py  test_model.py
m6_practice/wandb/: latest-run
m6_practice/wandb/run-20250518_154320-wyntfmhv/: run-wyntfmhv.wandb
m6_practice/wandb/run-20250518_200753-xrxbh66x/: run-xrxbh66x.wandb
m6_practice/wandb/run-20250518_201126-ugclezye/: run-ugclezye.wandb
m6_practice/wandb/run-20250518_202033-pkh48lt2/: run-pkh48lt2.wandb
m6_practice/wandb/run-20250518_213708-u9wsk5ze/: run-u9wsk5ze.wandb
m6_practice/wandb/run-20250518_214313-c6qj8lmp/: run-c6qj8lmp.wandb
m6_practice/wandb/run-20250518_214351-s9663c65/: run-s9663c65.wandb
m6_practice/wandb/run-20250519_142343-sthocfm1/: run-sthocfm1.wandb
m6_practice/wandb/sweep-95kuynbx/: config-0hc0h9c9.yaml  (+4 more)
(+37 files in other folders)
