[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "m6_practice"
version = "0.0.1"
description = "m6"
authors = [
  { name = "Euna Goo", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "m6_practice.train:main"
greetings = "src.m6_practice.iris_classifier:app"